--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -17,4 +17,11 @@
         <module>shippingcontext</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
