--- a/exporter/pom.xml
+++ b/exporter/pom.xml
@@ -4,19 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>ddd-examples</artifactId>
         <groupId>cn.hff.ddd</groupId>
+        <artifactId>ddd-examples</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>scheduler</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>exporter</artifactId>
+    <packaging>pom</packaging>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-batch</artifactId>
-        </dependency>
-    </dependencies>
-
+    <modules>
+        <module>web</module>
+        <module>scheduler</module>
+    </modules>
 </project>
