--- a/infrastructure/external/pom.xml
+++ b/infrastructure/external/pom.xml
@@ -13,5 +13,11 @@
     <artifactId>external</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
