--- a/infrastructure/messaging/pom.xml
+++ b/infrastructure/messaging/pom.xml
@@ -20,6 +20,10 @@
             <groupId>cn.hff.ddd</groupId>
             <artifactId>ordercontext</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
