--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -18,5 +18,11 @@
         <module>external</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
