--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>ddd-examples</artifactId>
         <groupId>cn.hff.ddd</groupId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>starter</artifactId>
